# mipt-course

./: 2ndyearstudents.md  AUTHORS  AutumnAssignment.md  BuildbotSetup.md  Building.md  CMakeLists.txt  CodeReview.md  Coverage.md  FinalPresentations.md  GitSVN.md  GoogleTest.md  Graduates.md  LICENSE  Makefile  Programme_v1.md  Programme_v2.md  ProjectConventions.md  ProjectHome.md  README  Redmine.md  ReleaseBranches.md  SubversionPlayground.md  UsefulLinks.md  extract_coverage.cmake  target_template.mk
base/: CMakeLists.txt  check_test.cpp  common.h  common_test.cpp  condition_variable.cpp  condition_variable.h  file_utils.cpp  file_utils.h  mutex.cpp  mutex.h  random.h  target.mk  time.cpp  time_test.cpp
buildbot/: master.cfg
demos/: test
demos/cmake/: main.cpp
demos/codestyle/: 1_variables_and_functions.cpp  2_constants_and_classes.cpp  3_disallow_demo.cpp  disallow_demo.cpp
demos/googletest/: 2_fixture.cpp
demos/makefiles/: Makefile  Makefile.complex  Makefile.full  Makefile.simple
demos/python/: 2_variables_and_types.py  3_statements.py  4_lists.py  7_containers.py  8_classes.py  8_containers.py  8_files.py  A_modules.py  B_main.py  C_docstrings.py  D_regexps.py  E_urllib2_regexp.py
pysandbox/: Makefile  math_expr_evaluation_test.py  mipt-login  mipt_login.py  python_demo_test.py  python_unittest_demo.py  testfile  torrent_dht_demo_test.py  unittest_demo.py
sandbox/: CMakeLists.txt  avl.h  avl_test.cpp  dijkstra_algorithm.cpp  dijkstra_algorithm_test.cpp  fenwick_tree.h  fenwick_tree_test.cpp  gmock_demo_test.cpp  hash.h  hash_map.h  labyrinth.cpp  labyrinth.h  labyrinth_test.cpp  library_test.cpp  list_test.cpp  lru_cache_test.cpp  math_expression_calculator_test.cpp  mocks_and_fakes_demo_test.cpp  ngramm_finder_test.cpp  pattern.cpp  pattern.h  pattern_test.cpp  red_black_tree-inl.h  red_black_tree.h  red_black_tree_test.cpp  scoped_ptr.h  scoped_ptr_test.cpp  stack.h  stack_test.cpp  sudoku_solver.cpp  sudoku_solver_test.cpp  target.mk  tdd_example_test.cpp  treap.h  treap_test.cpp  tsp.h  tsp_graph.cpp  tsp_path.cpp  tsp_test.cpp  valgrind_demo_test.cpp
sandbox11/: CMakeLists.txt  cpp0x_test.cpp
testing/: CMakeLists.txt  googletest.mk  googletest_main.cpp  valgrind_suppressions.txt
trunk/: AUTHORS  CMakeLists.txt  LICENSE  Makefile  build.sh  target_template.mk  trigger_build.txt
trunk/base/: CMakeLists.txt  check_test.cpp  common.h  common_test.cpp  condition_variable.cpp  condition_variable.h  file_utils.cpp  file_utils.h  mutex.cpp  mutex.h  random.h  target.mk  tdd_example_test.cpp  time.cpp  time.h
trunk/demos/: test
trunk/demos/cmake/: CMakeLists.txt  README  header_file.h
trunk/demos/codestyle/: 1_variables_and_functions.cpp  2_constants_and_classes.cpp  3_disallow_demo.cpp  constants_and_classes.cpp  variables_and_functions.cpp
trunk/demos/googletest/: 1_simple.cpp  2_fixture.cpp  3_deathtest.cpp  HOWTOBUILD  deathtest.cpp  simple.cpp
trunk/demos/makefiles/: Makefile.complex  Makefile.full  Makefile.simple  build_simple.sh  header_file.h  world.cpp
trunk/demos/python/: 1_helloworld.py  2_variables_and_types.py  4_lists.py  5_list_comprehensions.py  6_functions.py  7_files.py  8_classes.py  8_files.py  9_classes.py  9_modules.py  A_main.py  A_modules.py  B_files.py  B_regexps.py  C_docstrings.py  C_urllib2_regexp.py  D_regexps.py  D_urllib2_regexp.py  E_urllib2_regexp.py
trunk/pysandbox/: math_expr_evaluation_test.py  mipt-login.py  poker_test.py  testfile  torrent_dht_demo_test.py  unittest_demo.py
trunk/sandbox/: CMakeLists.txt  avl.h  avl_test.cpp  dijkstra_algorithm.cpp  dijkstra_algorithm.h  dijkstra_algorithm_test.cpp  fenwick_tree.h  fenwick_tree_test.cpp  gmock_demo_test.cpp  hash_map_test.cpp  hash_test.cpp  labyrinth.cpp  labyrinth.h  labyrinth_test.cpp  library_test.cpp  list.h  list_test.cpp  lru_cache_test.cpp  mocks_and_fakes_demo_test.cpp  ngramm_finder_test.cpp  pattern.cpp  pattern.h  pattern_test.cpp  red_black_tree-inl.h  red_black_tree_test.cpp  scoped_ptr.h  scoped_ptr_test.cpp  stack.h  stack_test.cpp  sudoku_solver.h  sudoku_solver_test.cpp  target.mk  tdd_example_test.cpp  treap.h  treap_test.cpp  valgrind_demo_test.cpp
trunk/sandbox11/: CMakeLists.txt  lzw.cpp  lzw.h  lzw_test.cpp
trunk/testing/: CMakeLists.txt  googletest.mk  googletest_main.cpp  valgrind_suppressions.txt
trunk/ubermipt_svn/: CREATE_NEW_REPO  README  add_student  change_password  common_utils  sample_authz  sample_passwd  sample_svnconf
trunk/useful_stuff/: .vimrc  README
ubermipt_svn/: CREATE_NEW_REPO  README  add_student  common_utils  precommit.py  sample_authz  sample_email
useful_stuff/: .vimrc
wiki/: 2ndyearstudents.wiki  AutumnAssignment.wiki  BuildbotSetup.wiki  Building.wiki  CodeReview.wiki  Coverage.wiki  FinalPresentations.wiki  GitSVN.wiki  GoogleTest.wiki  Graduates.wiki  Programme_v1.wiki  Programme_v2.wiki  ProjectConventions.wiki  ProjectsConventions.wiki  Redmine.wiki  RedmineInstall.wiki  ReleaseBranches.wiki  SubversionPlayground.wiki  UsefulLinks.wiki
